Mobile alignment issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ li > a:hover:after{
         font-size: 24px;
     }
     .android-img {
-        margin-left: 30px;
+        margin-left: 20px;
         text-align: center;
     }
     .partner{
